--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,14 @@
 .border-4 { border: 4px solid #e9ecef }
 .border-5 { border: 5px solid #e9ecef }
 
+.navbar-dark .navbar-nav .nav-link:focus {
+  color: rgba(255,255,255,.5);
+}
+
+.navbar-dark .navbar-nav .nav-link.active {
+  color: #ffffff;
+}
+
 .btn {
   -webkit-border-radius: 0%;
   -moz-border-radius: 0%;
