Add Min Height to Header

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,11 @@
   text-decoration: none;
 }
 
+#heading {
+  position: relative;
+  min-height: 585px
+}
+
 #heading-name {
   position: relative;
 }
