--- a/css/styles.css
+++ b/css/styles.css
@@ -118,3 +118,26 @@ h2 {
 .blockquote {
   font-size: 1rem;
 }
+
+.img-fluid {
+    margin: auto;
+}
+
+.modal-header {
+    background-color: #323232;
+    border-radius: 3px 3px 0 0;
+    border-bottom: 1px solid #1C1C1C;
+}
+.modal-body {
+    background-color: #222222;
+}
+.modal-body pre {
+    padding: 9.5px;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+}
+.modal-footer {
+    background-color: #323232;
+    border-radius: 0 0 3px 3px;
+    border-top: 1px solid #1C1C1C;
+}
