--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,12 @@
 .border-4 { border: 4px solid #e9ecef }
 .border-5 { border: 5px solid #e9ecef }
 
+.navbar {
+    padding: 0 !important;
+}
 .navbar-dark .navbar-nav .nav-link:focus {
   color: rgba(255,255,255,.5);
 }
-
 .navbar-dark .navbar-nav .nav-link.active {
   color: #ffffff;
 }
@@ -140,4 +142,16 @@ h2 {
     background-color: #323232;
     border-radius: 0 0 3px 3px;
     border-top: 1px solid #1C1C1C;
+}
+a.svg {
+  position: relative;
+  display: inline-block;
+}
+a.svg:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
